# ribbon-at-the-bell-bound

./: .gitignore  CLAUDE.md  LICENSE  MODEL_FACTS.md  README.md  RELEASES.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v2.1.md  SPEC.md  born.py  born2.py  chord.py  model.py  phase_C_report.md  ribbon.py  ribbon_model_note.md
sim/: conv_study.py  margin_diag.py  margin_rot.py  margin_rot_quick.py  paranoia_R1.py  pyproject.toml  r1b_Nsweep.py  r3_anneal_test.py  r3_diag.py  r3_minifp64.py  r4a_audit.py  r4b_pt.py  r4c.py  r4d.py  r4e.py  r4e_v2.py  run.py  soft_lean.py
sim/cycle2/: C2A_prereg.md  C2F_prereg.md  C2F_prereg_addendum1.md  C2ISO_prereg.md  C2J_J0_diagnostic.md  C2J_J0v2_report.md  C2J_anneal_feasibility.md  C2J_anneal_prereg.md  C2J_anneal_prereg_DRAFT.md  C2J_prereg.md  C2J_prereg_addendum1.md  C2J_prereg_addendum2.md  C2J_prereg_addendum3.md  C2Janneal_addendum1.md  C2Janneal_analysis.md  C2L_statement.md  C2R_audit_addendum.md  C2R_prereg.md  C2TM_predictions.md  C2TM_prereg.md  C2V0_prereg.md  C2_synthesis.md  C2_synthesis_SKELETON.md  README.md  adaptive.py  analysis_c2a.py  analysis_c2f0.py  analysis_c2f_campaign.py  analysis_c2iso.py  analysis_c2j.py  analysis_c2r.py  analysis_c2tm_stage2.py  canon_note_trilemma_DRAFT.md  coupling.py  fit_c2iso_chord.py  fit_c2tm.py  fix_c2r_refit.py  run_c2a.py  run_c2f0.py  run_c2f0b.py  (+12 more)
sim/cycle3/: C3B_paper_SKELETON.md  C3B_prereg.md  C3B_prereg_addendum1.md  C3B_prereg_addendum2.md  C3Bmech_M0_STOP_note.md  C3Bmech_M1M2_note.md  C3Bmech_addendum2.md  C3Bmech_addendum3.md  C3Bmech_analytics.md  C3Bmech_prereg.md  (+30 more)
(+261 files in other folders)
